// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeItems renders 0 1`] = `
Array [
  .c0 {
  place-items: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders function 1`] = `
Array [
  .c0 {
  place-items: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: has;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: has;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders invalid theme path 1`] = `
Array [
  .c0 {
  place-items: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders negative number 1`] = `
Array [
  .c0 {
  place-items: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    place-items: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-items: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    place-items: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-items: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-items: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-items: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-items: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-items: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-items: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    place-items: July;
  }
}

@media April {
  .c0 {
    place-items: August;
  }
}

@media January {
  .c0 {
    place-items: September;
  }
}

@media April {
  .c0 {
    place-items: November;
  }
}

@media June {
  .c0 {
    place-items: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    place-items: July;
  }
}

@media April {
  .c0 {
    place-items: August;
  }
}

@media January {
  .c0 {
    place-items: September;
  }
}

@media April {
  .c0 {
    place-items: November;
  }
}

@media June {
  .c0 {
    place-items: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-items: January;
  }
}

@media April {
  .c0 {
    place-items: December;
  }
}

@media January {
  .c0 {
    place-items: April;
  }
}

@media April {
  .c0 {
    place-items: May;
  }
}

@media June {
  .c0 {
    place-items: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-items: January;
  }
}

@media April {
  .c0 {
    place-items: December;
  }
}

@media January {
  .c0 {
    place-items: April;
  }
}

@media April {
  .c0 {
    place-items: May;
  }
}

@media June {
  .c0 {
    place-items: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders postitive number 1`] = `
Array [
  .c0 {
  place-items: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders string 1`] = `
Array [
  .c0 {
  place-items: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: June;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: June;
}

<div
    className="c0"
  />,
]
`;

exports[`placeItems renders valid theme path 1`] = `
Array [
  .c0 {
  place-items: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-items: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
